feat: Add HR functionality to view onboarded employees with dedicated repository, service, controller, and UI.